|#000| Added div wrap to all pages and prevented openlmis header to go below the logo

--- a/modules/openlmis-web/src/main/webapp/public/less/base.less
+++ b/modules/openlmis-web/src/main/webapp/public/less/base.less
@@ -13,7 +13,7 @@ body {
   src: url('../fonts/HelveticaNeue-CondensedBold.woff') format('woff'); /* Modern Browsers */
   }
 #wrap {
-  min-width: 960px;
+  min-width: 1000px;
 }
 
 //bootstrap overrides: buttons
